--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,6 +4,7 @@
 :root {
     --primary: #fe2c55;
     --text-color: rgba(22, 24, 35, 1);
+    --white: #fff;
 
     //Default layout
     --default-layout-header-height: 60px;
