--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -27,6 +27,11 @@
     margin-left: 8px;
 }
 
+.icon {
+    width: 24px;
+    display: inline-block;
+    text-align: center;
+}
 //Button types
 
 .rounded {
@@ -61,9 +66,14 @@
     }
 }
 
-.text {
+.upload {
+    color: var(--text-color);
+    border-color: rgba(22, 24, 35, 0.12);
+    border-radius: 2px;
+
     &:hover {
-        text-decoration: underline;
+        background-color: rgba(22, 24, 35, 0.03);
+        border-color: rgba(22, 24, 35, 0.12);
     }
 }
 //Button Sizes
