--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -96,6 +96,30 @@
     }
 }
 
+//Actions
+
+.actions {
+    display: flex;
+    align-items: center;
+}
+
+.action-btn {
+    color: #161823;
+    font-size: 2rem;
+    padding: 4px 14px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-left: 14px;
+    cursor: pointer;
+}
+
 .more-btn {
     font-size: 2rem;
     margin-left: 28px;
