--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,5 +1,4 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400;500;600;700&display=swap');
 
 :root {
     --primary: #fe2c55;
@@ -23,7 +22,7 @@ html {
 }
 
 body {
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: 'Proxima', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
@@ -34,12 +33,44 @@ input,
 [tabindex] {
     outline: none;
     border: none;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: 'Proxima', sans-serif;
 }
 
 a[href] {
     color: var(--text-color);
     text-decoration: none;
+}
+
+//fonts embedded
+
+@font-face {
+    font-family: 'Proxima';
+    src: url('/assets/fonts/Proxima-Nova-Regular.woff2');
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'Proxima';
+    src: url('/assets/fonts/ProximaNova-Semibold.woff2');
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: 'Proxima';
+    src: url('/assets/fonts/Proxima-Nova-Bold.woff2');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: 'Sofiapro';
+    src: url('/assets/fonts/sofiapro-regular.woff');
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'Sofiapro';
+    src: url('/assets/fonts/sofiapro-bold.woff2');
+    font-weight: 700;
 }
 
 //Custom tippy tolltip
