--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -106,9 +106,14 @@
 .action-btn {
     color: #161823;
     font-size: 2rem;
-    padding: 4px 14px;
+    padding: 4px 12px;
     background-color: transparent;
     cursor: pointer;
+    margin-top: 4px;
+
+    &.action-btn-left {
+        margin-left: 8px;
+    }
 }
 
 .user-avatar {
@@ -116,7 +121,7 @@
     height: 32px;
     object-fit: cover;
     border-radius: 50%;
-    margin-left: 14px;
+    margin-left: 12px;
     cursor: pointer;
 }
 
