--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -5,9 +5,10 @@
 }
 
 .container {
+    display: flex;
     width: var(--default-layout-width, 1150px);
     padding: 0 var(--default-layout-horizontal-spacer);
-    display: flex;
+    margin-top: var(--default-layout-header-height);
 }
 
 .content {
