--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -6,8 +6,8 @@
 
 .container {
     display: flex;
+    max-width: 100%;
     width: var(--default-layout-width, 1150px);
-    padding: 0 var(--default-layout-horizontal-spacer);
     margin-top: var(--default-layout-header-height);
 }
 
